fix review comments

--- a/packages/modrinth-log/Cargo.toml
+++ b/packages/modrinth-log/Cargo.toml
@@ -5,8 +5,8 @@ rust-version.workspace = true
 repository.workspace = true
 
 [dependencies]
-anyhow = { workspace = true }
 dotenvy = { workspace = true }
+eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-ecs = { workspace = true }
 tracing-subscriber = { workspace = true }
