Make Mural payout code more resilient

--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -72,7 +72,7 @@ lettre = { workspace = true }
 meilisearch-sdk = { workspace = true, features = ["reqwest"] }
 modrinth-maxmind = { workspace = true }
 modrinth-util = { workspace = true, features = ["decimal", "utoipa"] }
-muralpay = { workspace = true, features = ["mock", "utoipa"] }
+muralpay = { workspace = true, features = ["client", "mock", "utoipa"] }
 murmur2 = { workspace = true }
 paste = { workspace = true }
 path-util = { workspace = true }
