--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
 		"@formatjs/cli": "^6.2.12",
 		"@nuxt/devtools": "^1.3.3",
 		"@types/dompurify": "^3.0.5",
+		"@types/iso-3166-2": "^1.0.4",
 		"@types/node": "^20.1.0",
 		"@vintl/compact-number": "^2.0.5",
 		"@vintl/how-ago": "^3.0.1",
@@ -58,6 +59,7 @@
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.7.0",
+		"iso-3166-2": "1.0.0",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
 		"markdown-it": "14.1.0",
