--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,6 +29,7 @@
 		"stripe": "^18.1.1",
 		"typescript": "^5.4.5",
 		"vue": "^3.5.13",
+		"vue-component-type-helpers": "^3.1.8",
 		"vue-router": "4.3.0"
 	},
 	"dependencies": {
