feat: switch to monaco

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -51,7 +51,6 @@
 		"@vue-email/components": "^0.0.21",
 		"@vue-email/render": "^0.0.9",
 		"@vueuse/core": "^11.1.0",
-		"ace-builds": "^1.36.2",
 		"ansi-to-html": "^0.7.2",
 		"dayjs": "^1.11.7",
 		"dompurify": "^3.1.7",
@@ -61,6 +60,8 @@
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
 		"markdown-it": "14.1.0",
+		"monaco-editor": "^0.55.1",
+		"monaco-editor-vue3": "^1.0.5",
 		"pathe": "^1.1.2",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^4.4.1",
@@ -71,7 +72,6 @@
 		"vue-confetti-explosion": "^1.0.2",
 		"vue-multiselect": "3.0.0-alpha.2",
 		"vue-typed-virtual-list": "^1.0.10",
-		"vue3-ace-editor": "^2.2.4",
 		"vue3-apexcharts": "^1.5.2",
 		"xss": "^1.0.14"
 	},
