--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
 		"@types/three": "^0.172.0",
 		"@vintl/how-ago": "^3.0.1",
 		"@vueuse/core": "^11.1.0",
+		"ace-builds": "^1.36.2",
 		"apexcharts": "^3.44.0",
 		"dayjs": "^1.11.10",
 		"floating-vue": "^5.2.2",
