Revert "Use alt CDN URL when request header is passed (#4921)"
This reverts commit 609e3896eb1df0dc8d90b154cfe9aee051f822fd.

--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -12,10 +12,9 @@ path = "src/main.rs"
 [dependencies]
 actix-cors = { workspace = true }
 actix-files = { workspace = true }
-actix-http = { workspace = true }
+actix-http = { workspace = true, optional = true }
 actix-multipart = { workspace = true }
 actix-rt = { workspace = true }
-actix-utils = { workspace = true }
 actix-web = { workspace = true }
 actix-web-prom = { workspace = true, features = ["process"] }
 actix-ws = { workspace = true }
@@ -151,7 +150,7 @@ tikv-jemallocator = { workspace = true, features = [
 ] }
 
 [features]
-test = []
+test = ["dep:actix-http"]
 
 [lints]
 workspace = true
