--- a/apps/daedalus_client/Cargo.toml
+++ b/apps/daedalus_client/Cargo.toml
@@ -5,12 +5,12 @@ edition.workspace = true
 
 [dependencies]
 async_zip = { workspace = true, features = [
-  "bzip2",
-  "chrono",
-  "deflate",
-  "deflate64",
-  "tokio-fs",
-  "zstd",
+	"bzip2",
+	"chrono",
+	"deflate",
+	"deflate64",
+	"tokio-fs",
+	"zstd",
 ] }
 bytes = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
@@ -20,11 +20,7 @@ dotenvy = { workspace = true }
 futures = { workspace = true }
 indexmap = { workspace = true, features = ["serde"] }
 itertools = { workspace = true }
-reqwest = { workspace = true, features = [
-  "json",
-  "rustls-tls-native-roots",
-  "stream",
-] }
+reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots", "stream"] }
 rust-s3 = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
