feat: icons add cmd

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"fix:frontend": "turbo run fix --continue --parallel --filter='!@modrinth/labrinth' --filter='!@modrinth/app' --filter='!@modrinth/app-lib' --filter='!@modrinth/daedalus' --filter='!@modrinth/daedalus_client' --filter='!@modrinth/app-playground'",
 		"fix:ancillary": "prettier --write .github *.*",
 		"ci": "turbo run lint test --continue",
-		"intl:extract": "pnpm ui:intl:extract && pnpm web:intl:extract && pnpm app:intl:extract && pnpm moderation:intl:extract"
+		"intl:extract": "pnpm ui:intl:extract && pnpm web:intl:extract && pnpm app:intl:extract && pnpm moderation:intl:extract",
+		"icons:add": "pnpm --filter @modrinth/assets icons:add"
 	},
 	"devDependencies": {
 		"@modrinth/tooling-config": "workspace:*",
