fix preset import

--- a/packages/tooling-config/package.json
+++ b/packages/tooling-config/package.json
@@ -14,12 +14,14 @@
 		"./prettier.config.cjs": "./prettier.config.cjs",
 		"./frontend.prettier.config.cjs": "./frontend.prettier.config.cjs",
 		"./app-lib.prettier.config.cjs": "./app-lib.prettier.config.cjs",
-		"./labrinth.prettier.config.cjs": "./labrinth.prettier.config.cjs"
+		"./labrinth.prettier.config.cjs": "./labrinth.prettier.config.cjs",
+		"./tailwind/*": "./tailwind/*"
 	},
 	"files": [
 		"eslint/",
 		"typescript/",
 		"prettier/",
+		"tailwind/",
 		"index.js"
 	],
 	"peerDependencies": {
