devex: prepr:web and app with proper caching (#4957)
* devex: prepr:web and app with proper caching

* fix: add tooling config to turbo global deps

* fix: exclude turbo + node modules for tooling-config

* feat: prepr:frontend

* fix: ci issue

--- a/turbo.jsonc
+++ b/turbo.jsonc
@@ -1,6 +1,11 @@
 {
 	"$schema": "./node_modules/turbo/schema.json",
 	"concurrency": "100%",
+	"globalDependencies": [
+		"packages/tooling-config/**",
+		"!packages/tooling-config/.turbo/**",
+		"!packages/tooling-config/node_modules/**"
+	],
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"],
@@ -60,11 +65,13 @@
 				"NEXTEST_*"
 			]
 		},
-		"fix": {
-			"cache": false
-		},
+		"fix": {},
 		"fix:ancillary": {
 			"cache": false
+		},
+		"intl:extract": {},
+		"prepr": {
+			"dependsOn": ["^prepr", "fix", "intl:extract"]
 		}
 	}
 }
