devex: add icon cmd (#4958)
* feat: icons add cmd

* fix: dep

* Update packages/assets/build/add-icons.ts

Signed-off-by: Calum H. <hendersoncal117@gmail.com>

* fix: lint

---------

Signed-off-by: Calum H. <hendersoncal117@gmail.com>
Signed-off-by: Calum H. <contact@cal.engineer>

--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -7,13 +7,16 @@
 	"scripts": {
 		"lint": "pnpm run icons:validate && eslint . && prettier --check .",
 		"fix": "pnpm run icons:generate && eslint . --fix && prettier --write .",
+		"icons:add": "jiti build/add-icons.ts",
 		"icons:test": "jiti build/generate-exports.ts --test",
 		"icons:validate": "jiti build/generate-exports.ts --validate",
 		"icons:generate": "jiti build/generate-exports.ts"
 	},
 	"devDependencies": {
 		"@modrinth/tooling-config": "workspace:*",
+		"@types/node": "^20.1.0",
 		"jiti": "^2.4.2",
+		"lucide-static": "^0.562.0",
 		"vue": "^3.5.13"
 	}
 }
