--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"prepr:frontend": "turbo run prepr --filter=@modrinth/frontend --filter=@modrinth/app-frontend",
 		"prepr:frontend:lib": "turbo run prepr --filter=@modrinth/ui --filter=@modrinth/moderation --filter=@modrinth/assets --filter=@modrinth/blog --filter=@modrinth/api-client --filter=@modrinth/utils --filter=@modrinth/tooling-config",
 		"prepr:frontend:web": "turbo run prepr --filter=@modrinth/frontend",
-		"prepr:frontend:app": "turbo run prepr --filter=@modrinth/app-frontend"
+		"prepr:frontend:app": "turbo run prepr --filter=@modrinth/app-frontend",
+    "icons:add": "pnpm --filter @modrinth/assets icons:add"
 	},
 	"devDependencies": {
 		"@modrinth/tooling-config": "workspace:*",
