--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
 		"intl-messageformat": "^10.7.7",
+		"vue-i18n": "^9.14.4",
 		"@codemirror/lang-markdown": "^6.2.3",
 		"@codemirror/language": "^6.9.3",
 		"@codemirror/state": "^6.3.2",
