--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@modrinth/ui",
 	"version": "0.0.0",
+	"type": "module",
 	"private": true,
 	"main": "./index.ts",
 	"types": "./index.ts",
@@ -18,19 +19,39 @@
 	"scripts": {
 		"lint": "eslint . && prettier --check .",
 		"fix": "eslint . --fix && prettier --write .",
-		"intl:extract": "formatjs extract \"src/**/*.{vue,ts,tsx,js,jsx,mts,cts,mjs,cjs}\" --ignore \"src/**/*.d.ts\" --out-file src/locales/en-US/index.json --preserve-whitespace"
+		"intl:extract": "formatjs extract \"src/**/*.{vue,ts,tsx,js,jsx,mts,cts,mjs,cjs}\" --ignore \"src/**/*.d.ts\" --out-file src/locales/en-US/index.json --preserve-whitespace",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"devDependencies": {
+		"@chromatic-com/storybook": "^4.1.3",
 		"@formatjs/cli": "^6.2.12",
 		"@modrinth/tooling-config": "workspace:*",
+		"@storybook/addon-a11y": "^10.1.10",
+		"@storybook/addon-docs": "^10.1.10",
+		"@storybook/addon-onboarding": "^10.1.10",
+		"@storybook/addon-vitest": "^10.1.10",
+		"@storybook/builder-vite": "^10.1.10",
+		"@storybook/vue3-vite": "^10.1.10",
 		"@stripe/stripe-js": "^7.3.1",
+		"@tailwindcss/vite": "^4.1.18",
 		"@vintl/unplugin": "^1.5.1",
 		"@vintl/vintl": "^4.4.1",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"@vitest/browser-playwright": "^4.0.16",
+		"@vitest/coverage-v8": "^4.0.16",
+		"eslint-plugin-storybook": "^10.1.10",
+		"playwright": "^1.57.0",
+		"storybook": "^10.1.10",
 		"stripe": "^18.1.1",
 		"typescript": "^5.4.5",
+		"vite": "^5.4.6",
+		"vite-svg-loader": "^5.1.0",
+		"vitest": "^4.0.16",
 		"vue": "^3.5.13",
 		"vue-component-type-helpers": "^3.1.8",
-		"vue-router": "4.3.0"
+		"vue-router": "4.3.0",
+		"tailwindcss": "^3.4.4"
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
