--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,7 +15,7 @@
 	},
 	"devDependencies": {
 		"@formatjs/cli": "^6.2.12",
-		"@nuxt/devtools": "^1.3.3",
+		"@nuxt/devtools": "^3.1.1",
 		"@nuxtjs/i18n": "^8.5.5",
 		"@types/dompurify": "^3.0.5",
 		"@types/iso-3166-2": "^1.0.4",
@@ -23,7 +23,7 @@
 		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"glob": "^10.2.7",
-		"nuxt": "^3.14.1592",
+		"nuxt": "3.15.4",
 		"postcss": "^8.4.39",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.58.0",
@@ -47,7 +47,7 @@
 		"@tanstack/vue-query": "^5.90.7",
 		"@types/three": "^0.172.0",
 		"intl-messageformat": "^10.7.7",
-		"@vitejs/plugin-vue": "^5.0.4",
+		"@vitejs/plugin-vue": "^6.0.3",
 		"@vue-email/components": "^0.0.21",
 		"@vue-email/render": "^0.0.9",
 		"@vueuse/core": "^11.1.0",
