feat: nuxt 3.15.4 → 3.16.2 (vite 6)

--- a/packages/tooling-config/package.json
+++ b/packages/tooling-config/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@modrinth/tooling-config",
 	"version": "0.0.0",
+	"type": "module",
 	"private": true,
 	"description": "Unified tooling configuration for Modrinth monorepo",
 	"main": "./index.js",
