--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,14 +15,14 @@
 	},
 	"devDependencies": {
 		"@formatjs/cli": "^6.2.12",
+		"@modrinth/tooling-config": "workspace:*",
 		"@nuxtjs/i18n": "^9.0.0",
 		"@types/dompurify": "^3.0.5",
 		"@types/iso-3166-2": "^1.0.4",
 		"@types/node": "^20.1.0",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
 		"glob": "^10.2.7",
-		"nuxt": "3.17.5",
+		"nuxt": "^3.20.2",
 		"postcss": "^8.4.39",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.58.0",
