--- a/packages/tooling-config/package.json
+++ b/packages/tooling-config/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-prettier": "^5.5.3",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"eslint-plugin-vue": "^10.4.0",
+		"vue-eslint-parser": "^10.1.3",
 		"globals": "^16.3.0",
 		"prettier-plugin-sql-cst": "^0.13.0",
 		"prettier-plugin-toml": "^2.0.6",
