--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"prepr:frontend:lib": "turbo run prepr --filter=@modrinth/ui --filter=@modrinth/moderation --filter=@modrinth/assets --filter=@modrinth/blog --filter=@modrinth/api-client --filter=@modrinth/utils --filter=@modrinth/tooling-config",
 		"prepr:frontend:web": "turbo run prepr --filter=@modrinth/frontend",
 		"prepr:frontend:app": "turbo run prepr --filter=@modrinth/app-frontend",
-    "icons:add": "pnpm --filter @modrinth/assets icons:add"
+		"icons:add": "pnpm --filter @modrinth/assets icons:add"
 	},
 	"devDependencies": {
 		"@modrinth/tooling-config": "workspace:*",
@@ -34,6 +34,14 @@
 	"pnpm": {
 		"patchedDependencies": {
 			"readable-stream@2.3.8": "patches/readable-stream@2.3.8.patch"
+		},
+		"overrides": {
+			"vite": "npm:rolldown-vite@7.3.0"
+		},
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"vite": "7"
+			}
 		}
 	},
 	"prettier": "@modrinth/tooling-config/prettier.config.cjs"
