fix: vue-router mismatch

--- a/apps/app-frontend/package.json
+++ b/apps/app-frontend/package.json
@@ -40,7 +40,7 @@
 		"vite-svg-loader": "^5.1.0",
 		"vue": "^3.5.13",
 		"vue-multiselect": "3.0.0",
-		"vue-router": "4.3.0",
+		"vue-router": "^4.6.0",
 		"vue-virtual-scroller": "v2.0.0-beta.8"
 	},
 	"devDependencies": {
