--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,7 @@
 		"typescript": "^5.4.5",
 		"vue": "^3.5.13",
 		"vue-component-type-helpers": "^3.1.8",
-		"vue-router": "4.3.0"
+		"vue-router": "^4.6.0"
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
