Deploy on pnpm changes

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -8,6 +8,7 @@ on:
       - 'packages/utils/**/*'
       - 'packages/assets/**/*'
       - '**/wrangler.jsonc'
+      - '**/pnpm-*.yaml'
   pull_request:
   workflow_dispatch:
 
