--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -65,18 +65,15 @@ jobs:
           CF_PAGES_URL: ${{ steps.meta.outputs.url }}
 
       - name: Deploy Cloudflare Worker
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          environment: ${{ steps.meta.outputs.env }}
-          workingDirectory: ./apps/frontend
-          packageManager: pnpm
-          wranglerVersion: '4.54.0'
-          command: ${{ steps.meta.outputs.cmd }}
-          secrets: |
-            RATE_LIMIT_IGNORE_KEY
+        id: wrangler
+        working-directory: ./apps/frontend
+        run: |
+          echo "RATE_LIMIT_IGNORE_KEY=${{ secrets.RATE_LIMIT_IGNORE_KEY }}" > .dev.vars
+          npx wrangler secret bulk --env="${{ steps.meta.outputs.env }}" .dev.vars
+          rm .dev.vars
+          npx wrangler ${{ steps.meta.outputs.cmd }} --env="${{ steps.meta.outputs.env }}"
         env:
-          RATE_LIMIT_IGNORE_KEY: ${{ secrets.RATE_LIMIT_IGNORE_KEY }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
 
       - name: Purge cache
         if: github.ref == 'refs/heads/prod'
