--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,7 +33,8 @@
 		"typescript": "^5.4.5",
 		"vite-svg-loader": "^5.1.0",
 		"vue-component-type-helpers": "^3.1.8",
-		"vue-tsc": "^2.0.24"
+		"vue-tsc": "^2.0.24",
+		"wrangler": "^4.54.0"
 	},
 	"dependencies": {
 		"@formatjs/intl-localematcher": "^0.5.4",
