fix: only run push workflow on main or prod

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -2,6 +2,9 @@ name: Deploy frontend
 
 on:
   push:
+    branches:
+      - main
+      - prod
     paths:
       - 'apps/frontend/**/*'
       - 'packages/ui/**/*'
