Fix setting PREVIEW variable

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -40,7 +40,7 @@ jobs:
           elif [ "${{ github.ref }}" != "refs/heads/prod" ] && [ "${{ github.ref }}" != "refs/heads/main" ]; then
             echo "env=staging" >> $GITHUB_OUTPUT
             echo "url=https://git-${GITHUB_SHA::8}-frontend-staging.modrinth.workers.dev" >> $GITHUB_OUTPUT
-            echo "cmd=versions upload --preview-alias ${GITHUB_SHA::8} --var PREVIEW=true" >> $GITHUB_OUTPUT
+            echo "cmd=versions upload --preview-alias ${GITHUB_SHA::8} --var PREVIEW:true" >> $GITHUB_OUTPUT
           else
             # Production env should be empty
             echo "url=https://modrinth.com" >> $GITHUB_OUTPUT
