--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,16 +20,14 @@
 		"@formatjs/cli": "^6.2.12",
 		"@modrinth/tooling-config": "workspace:*",
 		"@nuxtjs/i18n": "^9.0.0",
+		"@nuxtjs/tailwindcss": "^6.14.0",
 		"@types/dompurify": "^3.0.5",
 		"@types/iso-3166-2": "^1.0.4",
 		"@types/node": "^20.1.0",
-		"autoprefixer": "^10.4.19",
 		"glob": "^10.2.7",
 		"nuxt": "^3.20.2",
-		"postcss": "^8.4.39",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"sass": "^1.58.0",
-		"tailwindcss": "^3.4.4",
 		"typescript": "^5.4.5",
 		"vite-svg-loader": "^5.1.0",
 		"vue-component-type-helpers": "^3.1.8",
