--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 		"patchedDependencies": {
 			"readable-stream@2.3.8": "patches/readable-stream@2.3.8.patch"
 		},
+		"overrides": {
+			"vite": "npm:rolldown-vite@7.2.11"
+		},
 		"peerDependencyRules": {
 			"allowedVersions": {
 				"vite": "7",
