--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,12 +46,14 @@
 		"@modrinth/ui": "workspace:*",
 		"@modrinth/utils": "workspace:*",
 		"@pinia/nuxt": "^0.11.3",
+		"@sentry/nuxt": "^10.32.1",
 		"@tanstack/vue-query": "^5.90.7",
 		"@types/three": "^0.172.0",
 		"@vitejs/plugin-vue": "^6.0.3",
 		"@vue-email/components": "^0.0.21",
 		"@vue-email/render": "^0.0.9",
 		"@vueuse/core": "^11.1.0",
+		"ace-builds": "^1.36.2",
 		"ansi-to-html": "^0.7.2",
 		"dayjs": "^1.11.7",
 		"dompurify": "^3.1.7",
@@ -63,7 +65,6 @@
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
 		"markdown-it": "14.1.0",
-		"ace-builds": "^1.36.2",
 		"pathe": "^1.1.2",
 		"pinia": "^3.0.0",
 		"pinia-plugin-persistedstate": "^4.4.1",
