--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   meilisearch0:
     image: getmeili/meilisearch:v1.12.0
     container_name: labrinth-meilisearch0
+    networks:
+      - meilisearch-mesh
     restart: on-failure
     ports:
       - '127.0.0.1:7700:7700'
@@ -140,6 +142,8 @@ services:
     image: getmeili/meilisearch:v1.12.0
     container_name: labrinth-meilisearch1
     restart: on-failure
+    networks:
+      - meilisearch-mesh
     ports:
       - '127.0.0.1:7701:7700'
     volumes:
@@ -159,6 +163,8 @@ services:
       - sharded-meilisearch
     image: nginx:alpine
     container_name: labrinth-meili-lb
+    networks:
+      - meilisearch-mesh
     depends_on:
       meilisearch0:
         condition: service_healthy
@@ -168,6 +174,9 @@ services:
       - '127.0.0.1:7710:80'
     volumes:
       - ./apps/labrinth/nginx/meili-lb.conf:/etc/nginx/conf.d/default.conf:ro
+networks:
+  meilisearch-mesh:
+    driver: bridge
 volumes:
   meilisearch-data:
   meilisearch1-data:
