--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -13,8 +13,8 @@ DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
 DATABASE_MAX_CONNECTIONS=16
 
-MEILISEARCH_READ_ADDR=http://labrinth-meilisearch0:7700
-MEILISEARCH_WRITE_ADDRS=http://labrinth-meilisearch0:7700
+MEILISEARCH_READ_ADDR=http://localhost:7700
+MEILISEARCH_WRITE_ADDRS=http://localhost:7700
 
 # # For a sharded Meilisearch setup (sharded-meilisearch docker compose profile)
 # MEILISEARCH_READ_ADDR=http://localhost:7710
