--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       POSTGRES_USER: labrinth
       POSTGRES_PASSWORD: labrinth
       POSTGRES_HOST_AUTH_METHOD: trust
+      PGUSER: labrinth
     healthcheck:
       test: ['CMD', 'pg_isready', '-U', 'labrinth']
       interval: 3s
