--- a/apps/frontend/wrangler.jsonc
+++ b/apps/frontend/wrangler.jsonc
@@ -26,6 +26,9 @@
 			"secret_name": "labrinth-production-ratelimit-key"
 		}
 	],
+	"version_metadata": {
+		"binding": "CF_VERSION_METADATA"
+	},
 	"vars": {
 		"ENVIRONMENT": "production",
 		"BASE_URL": "https://api.modrinth.com/v2/",
