fix: sentry env

--- a/apps/frontend/wrangler.jsonc
+++ b/apps/frontend/wrangler.jsonc
@@ -31,6 +31,7 @@
 	},
 	"vars": {
 		"ENVIRONMENT": "production",
+		"SENTRY_ENVIRONMENT": "production",
 		"BASE_URL": "https://api.modrinth.com/v2/",
 		"BROWSER_BASE_URL": "https://api.modrinth.com/v2/",
 		"PYRO_BASE_URL": "https://archon.modrinth.com/",
@@ -45,6 +46,7 @@
 			"routes": ["staging.modrinth.com/*"],
 			"vars": {
 				"ENVIRONMENT": "staging",
+				"SENTRY_ENVIRONMENT": "staging",
 				"BASE_URL": "https://staging-api.modrinth.com/v2/",
 				"BROWSER_BASE_URL": "https://staging-api.modrinth.com/v2/",
 				"PYRO_BASE_URL": "https://staging-archon.modrinth.com/",
