Implement replied/unreplied filter for tech review (#5006)
* Implement replied/unreplied filter for tech review

* project status filter

* wip: issue type filter

* correct filter field

* wip: break up tech review query

* Improve tech review query

* Get tech review working more properly

* Add get single project reports endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,7 +129,7 @@ services:
     volumes:
       # Labrinth deposits version files here;
       # Delphi reads them from here
-      - /tmp/modrinth:/tmp/modrinth:ro
+      - /tmp/modrinth:/tmp/modrinth:ro,z
     extra_hosts:
       # Delphi must send a message on a webhook to our backend,
       # so it must have access to our local network
