--- a/apps/labrinth/k8s/overlays/local/image-config/kustomization.example.yaml
+++ b/apps/labrinth/k8s/overlays/local/image-config/kustomization.example.yaml
@@ -1,5 +1,5 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Component
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Componen
 images:
   - name: labrinth
     newName: modrinth.local/labrinth # Change with your local build of labrinth or a remote image build (like ghcr.io/modrinth/labrinth:main)
