--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -15,10 +15,16 @@ on:
       - '.github/workflows/frontend-deploy.yml'
   pull_request:
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
+        description: 'The environment to deploy to (staging-preview or production-preview)'
 
 jobs:
   deploy:
-    if: github.repository_owner == 'modrinth'
+    if: github.repository_owner == 'modrinth' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository || github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_call')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -34,15 +40,28 @@ jobs:
         id: meta
         run: |
           echo "cmd=deploy" >> $GITHUB_OUTPUT
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+
+          ENV_INPUT="${{ inputs.environment }}"
+          REF="${{ github.ref }}"
+          SHA_SHORT="${GITHUB_SHA::8}"
+
+          if [ "$ENV_INPUT" = "staging-preview"]; then
+            echo "env=staging" >> $GITHUB_OUTPUT
+            echo "url=https://git-$SHA_SHORT-frontend-staging.modrinth.workers.dev" >> $GITHUB_OUTPUT
+            echo "cmd=versions upload --preview-alias git-$SHA_SHORT --var PREVIEW:true" >> $GITHUB_OUTPUT
+
+          elif [ "$ENV_INPUT" = "production-preview" ]; then
+            echo "env=production" >> $GITHUB_OUTPUT
+            echo "url=https://git-$SHA_SHORT-frontend.modrinth.workers.dev" >> $GITHUB_OUTPUT
+            echo "cmd=versions upload --preview-alias git-$SHA_SHORT --var PREVIEW:true" >> $GITHUB_OUTPUT
+
+          elif [ "$REF" = "refs/heads/main" ]; then
             echo "env=staging" >> $GITHUB_OUTPUT
             echo "url=https://staging.modrinth.com" >> $GITHUB_OUTPUT
-          elif [ "${{ github.ref }}" != "refs/heads/prod" ] && [ "${{ github.ref }}" != "refs/heads/main" ]; then
-            echo "env=staging" >> $GITHUB_OUTPUT
-            echo "url=https://git-${GITHUB_SHA::8}-frontend-staging.modrinth.workers.dev" >> $GITHUB_OUTPUT
-            echo "cmd=versions upload --preview-alias git-${GITHUB_SHA::8} --var PREVIEW:true" >> $GITHUB_OUTPUT
+
           else
-            # Production env should be empty
+            # Production env (no preview)
+            echo "env=production" >> $GITHUB_OUTPUT
             echo "url=https://modrinth.com" >> $GITHUB_OUTPUT
           fi
 
@@ -111,15 +130,6 @@ jobs:
             --data '{"hosts": ["modrinth.com", "www.modrinth.com", "staging.modrinth.com"]}' \
             https://api.cloudflare.com/client/v4/zones/e39df17b9c4ef44cbce2646346ee6d33/purge_cache
 
-      - name: Comment deploy URL on PR
-        if: github.event_name == 'pull_request'
-        uses: peter-evans/create-or-update-comment@v4
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body: |
-            ## 🚀 Frontend Deploy
-
-            | Commit | URL |
-            |--------|-----|
-            | ${{ github.event.pull_request.head.sha }} | ${{ steps.wrangler.outputs.deployment-url }} |
-          comment-tag: frontend-deploy
+      - name: Output deployment URL
+        if: github.event_name == 'workflow_call'
+        run: echo "${{ inputs.environment }}-url=${{ steps.wrangler.outputs.deployment-url }}" >> $GITHUB_OUTPUT
